Add: 첫 계급에 상첨자 표시 옵션 및 관련 기능 추가

--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
             <input type="text" id="label6" placeholder="누적상대도수(%)">
           </div>
 
+          <h4>표 옵션</h4>
+          <div class="input-group">
+            <label>
+              <input type="checkbox" id="showSuperscript" checked>
+              <span>첫 계급에 상첨자 표시 (이상/미만)</span>
+            </label>
+          </div>
+
           <h4>표 컬럼 정렬</h4>
           <div class="alignment-group">
             <label>계급:</label>
