Fix: 상첨자 표기 시 텍스트 축소 현상 해결

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
         </div>
       </div>
 
+      <!-- 표 옵션 -->
+      <div class="table-options">
+        <label>
+          <input type="checkbox" id="showSuperscript" checked>
+          <span>첫 계급에 상첨자 표시 (이상/미만)</span>
+        </label>
+      </div>
+
       <!-- 고급 설정 -->
       <details class="advanced-settings">
         <summary>고급 설정</summary>
@@ -80,14 +88,6 @@
 
           <h4>표 컬럼 설정 (드래그하여 순서 변경)</h4>
           <div id="tableConfigPanel"></div>
-
-          <h4>표 옵션</h4>
-          <div class="input-group">
-            <label>
-              <input type="checkbox" id="showSuperscript" checked>
-              <span>첫 계급에 상첨자 표시 (이상/미만)</span>
-            </label>
-          </div>
         </div>
       </details>
 
