Feat: JSON 내보내기 기능 추가 및 스타일 개선

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
 
         <!-- Statistics Summary (왼쪽 하단) -->
         <div class="stats-summary" id="statsSummary" role="region" aria-label="통계 요약"></div>
+
+        <!-- JSON 내보내기 버튼 -->
+        <button id="exportJsonBtn" class="export-btn" type="button" aria-label="차트 데이터 JSON 내보내기" style="display: none;">
+          💾 JSON 내보내기
+        </button>
       </aside>
 
       <!-- Right Column: Results Section -->
