Feat: 막대 라벨 표시 기능 추가

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
         </div>
       </div>
 
+      <!-- 막대 라벨 옵션 -->
+      <div class="table-options">
+        <label>
+          <input type="checkbox" id="showBarLabels">
+          <span>막대 위 값 표시</span>
+        </label>
+      </div>
+
       <!-- 고급 설정 -->
       <details class="advanced-settings">
         <summary>고급 설정</summary>
