Add: 다각형 색상 프리셋 기능 및 스타일 추가

--- a/index.html
+++ b/index.html
@@ -78,6 +78,25 @@
           <input type="checkbox" id="showPolygon" checked>
           <span>도수 다각형 표시</span>
         </label>
+        <div class="polygon-color-presets" id="polygonColorPresets">
+          <span class="preset-label">색상:</span>
+          <label class="color-preset-btn" data-preset="default">
+            <input type="radio" name="polygonColor" value="default" checked>
+            <span class="preset-color preset-default"></span>
+          </label>
+          <label class="color-preset-btn" data-preset="primary">
+            <input type="radio" name="polygonColor" value="primary">
+            <span class="preset-color preset-primary"></span>
+          </label>
+          <label class="color-preset-btn" data-preset="secondary">
+            <input type="radio" name="polygonColor" value="secondary">
+            <span class="preset-color preset-secondary"></span>
+          </label>
+          <label class="color-preset-btn" data-preset="tertiary">
+            <input type="radio" name="polygonColor" value="tertiary">
+            <span class="preset-color preset-tertiary"></span>
+          </label>
+        </div>
       </div>
 
       <!-- 표 옵션 -->
