Add: 차트 데이터 유형 설정 및 통합 최대 Y값 계산 기능 추가

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
               </div>
             </div>
 
+            <!-- 차트 데이터 유형 -->
+            <div class="setting-group">
+              <h4>차트 데이터 유형</h4>
+              <div class="radio-group" id="chartDataTypeRadios">
+                <!-- 동적 생성됨 -->
+              </div>
+            </div>
+
             <!-- 표 컬럼 설정 -->
             <div class="setting-group">
               <h4>표 컬럼 설정 (드래그하여 순서 변경)</h4>
@@ -282,14 +290,6 @@
               placeholder="자동 계산"
               step="0.1"
               min="0.1">
-          </div>
-        </div>
-
-        <!-- 차트 데이터 유형 선택 -->
-        <div class="chart-data-type-section">
-          <h4>📊 차트 데이터 유형</h4>
-          <div class="radio-group dataset-chart-data-type">
-            <!-- 동적 생성됨 -->
           </div>
         </div>
 
