Add: 데이터셋 색상 인디케이터 및 색상 변경 기능 구현

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <template id="datasetSectionTemplate">
     <details class="dataset-section" open>
       <summary class="dataset-header">
-        <span class="dataset-title">📊 데이터셋 1</span>
+        <span class="dataset-title"><span class="dataset-color-indicator" data-color="default"></span>📊 데이터셋 1</span>
         <button class="dataset-remove-btn" type="button" title="삭제">✕</button>
       </summary>
       <div class="dataset-content">
