Update: KaTeX 폰트 추가 및 렌더링 유틸리티 구현

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="도수분포표와 히스토그램을 자동으로 생성하는 통계 분석 도구">
   <title>도수분포 히스토그램 + 상대도수 다각형</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
 </head>
 <body>
   <main class="container">
