Fix: 시각화 API에 테이블 렌더링 기능 추가 및 관련 코드 수정

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="../../src/styles/lecture-template.css">
     <link rel="stylesheet" href="../../src/styles/math-visualization.css">
     <link rel="stylesheet" href="../../../../math-graph-library/packages/statistics/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
 </head>
 
 <body>
@@ -98,7 +99,8 @@
                             </div>
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
-  &quot;data&quot;: [2, 5, 8, 10, 3, 7, 9, 4, 6, 8],
+  &quot;purpose&quot;: &quot;table&quot;,
+  &quot;data&quot;: [62, 87, 97, 73, 59, 85, 80, 79, 65, 75],
   &quot;classCount&quot;: 5,
   &quot;mode&quot;: &quot;both&quot;,
   &quot;canvasSize&quot;: 600,
