Fix: 시각화 API에서 폰트 로드 대기 기능 추가 및 관련 함수 비동기 처리

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -102,16 +102,8 @@
   &quot;purpose&quot;: &quot;table&quot;,
   &quot;data&quot;: [62, 87, 97, 73, 59, 85, 80, 79, 65, 75],
   &quot;classCount&quot;: 5,
-  &quot;mode&quot;: &quot;both&quot;,
-  &quot;canvasSize&quot;: 600,
-  &quot;animation&quot;: {
-    &quot;enabled&quot;: true,
-    &quot;startTime&quot;: 0,
-    &quot;duration&quot;: 1000,
-    &quot;delay&quot;: 300,
-    &quot;effect&quot;: &quot;auto&quot;,
-    &quot;easing&quot;: &quot;easeOut&quot;
-  }
+  &quot;classWidth&quot;: 10,
+  &quot;canvasSize&quot;: 600
 }
 
 ">
