feat: 테이블 렌더링 API 개선 및 다양한 테이블 타입 지원 추가

--- a/frame-test/frame-test/public/examples/lecture_example.html
+++ b/frame-test/frame-test/public/examples/lecture_example.html
@@ -100,10 +100,16 @@
                             <div class="focus-area-scene0-viz1 text-animate-in" id="focusScene2_0viz1">
                                 <div class="visualization-container" id="visualizationContainer2_0_1" data-viz-mode="chart" data-viz-type="graph_library" data-viz-config="{
   &quot;purpose&quot;: &quot;chart&quot;,
-  &quot;data&quot;: [62, 87, 97, 73, 59, 85, 80, 79, 65, 75],
+  &quot;data&quot;: [162, 178, 175, 174, 189, 186, 183, 183, 181, 197, 194, 191, 190, 209, 205],
   &quot;classCount&quot;: 5,
   &quot;classWidth&quot;: 10,
-  &quot;canvasSize&quot;: 600
+  &quot;options&quot;: {
+    &quot;dataType&quot;: &quot;frequency&quot;,
+    &quot;axisLabels&quot;: {
+      &quot;xAxis&quot;: &quot;(cm)&quot;,
+      &quot;yAxis&quot;: &quot;(명)&quot;
+    }
+  }
 }
 
 ">
