feat: 히스토그램 색상 프리셋 추가 및 관련 UI 개선

--- a/index.html
+++ b/index.html
@@ -352,6 +352,17 @@
             <input type="checkbox" class="dataset-show-histogram" checked>
             <span>히스토그램 표시</span>
           </label>
+          <div class="histogram-color-presets">
+            <span class="preset-label">색상:</span>
+            <label class="color-preset-btn" data-preset="default">
+              <input type="radio" class="dataset-histogram-color" value="default" checked>
+              <span class="preset-color preset-hist-default"></span>
+            </label>
+            <label class="color-preset-btn" data-preset="green">
+              <input type="radio" class="dataset-histogram-color" value="green">
+              <span class="preset-color preset-hist-green"></span>
+            </label>
+          </div>
         </div>
 
         <div class="table-options frequency-only-options">
